# minimal_test_package

./: .travis.yml  CMakeLists.txt  README.md  package.xml  setup.py
include/minimal_test_package/: moduleB.h
src/: moduleB.cpp
test/: moduleA_unittest.py  moduleB_gtest.cpp
