<?xml version="1.0"?>
<package format="2">
  <name>minimal_test_package</name>
  <version>0.0.0</version>
  <description>The minimal_test_package package</description>

  <maintainer email="alex@todo.todo">alex</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rosunit</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
